fix: add word-wrap to kanban board

--- a/src/app/components/kanban-board/kanban-board.component.scss
+++ b/src/app/components/kanban-board/kanban-board.component.scss
@@ -55,6 +55,7 @@
     p {
       margin: 0;
       color: #666;
+      word-wrap: break-word;
     }
   }
   
